--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 /*!
- * jQuery wmuSlider v1.0
+ * jQuery wmuSlider v2.0
  * 
  * Copyright (c) 2011 Brice Lechatellier
  * http://brice.lechatellier.com/
@@ -10,3 +10,7 @@
 Changelog:
 v1.0 2011-09-05
     - Release
+v2.0 2011-10-26
+    - Code refactoring
+    - Gallery
+    - Lighter modernizr
